# omics-standardization

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
config/: default.yaml  logging.yaml
docs/: conf.py  index.rst  technical_spec.md
notebooks/: README.md
src/: __init__.py  _compat.py  logging.py  main.py
src/_settings/: __init__.py  _settings.py  _verbosity.py
src/batch_correctors/: __init__.py  _combat.py  _dann.py  _harmony.py  _selector.py
src/imputers/: __init__.py  _magic.py  _missforest.py  _selector.py  _zinb_vae.py
src/normalizers/: __init__.py  _quantile.py  _scran.py  _tmm_deseq.py  _utils.py
src/parsers/: __init__.py  _base.py  _biom.py  _csv.py  _fastq.py  _fcs.py  _h5ad.py  _mzml.py  _utils.py
src/pipeline/: __init__.py  _evaluator.py  _pipeline.py
src/plotting/: __init__.py  _embedding.py  _heatmap.py  _qc.py
src/preprocessing/: __init__.py
src/selectors/: __init__.py  _modality.py  _persistence.py  _strategy.py
src/storage/: __init__.py  _base.py  _graph.py  _manager.py  _minio.py  _relational.py
src/tools/: __init__.py  _dim_reduction.py  _evaluation.py
src/utils/: __init__.py  _decorators.py  _io.py
tests/: __init__.py  conftest.py  test_batch_correctors.py  test_biom_parser.py  test_csv_parser.py  test_imputers.py  test_normalizers.py  test_parsers.py  test_pipeline.py  test_selectors.py  test_storage.py
